# clone2

./: Cargo.toml  compile_shaders.sh  dirt.json  map.json  sand.json
src/: blocks.rs  chunk.rs  chunk_map.rs  components.rs  dir.rs  main.rs  math_utils.rs  neighbours.rs  ray_intersection.rs  renderer.rs  resources.rs  state.rs
src/chunk_middle_ware/: fs.glsl  fs.glsl.spv  mesh.rs  shadow.glsl  shadow.glsl.spv  vertex.rs  vs.glsl  vs.glsl.spv
src/flat_middleware/: fs.glsl  fs.glsl.spv  mesh.rs  mod.rs  vertex.rs  vs.glsl  vs.glsl.spv
src/manager/: mod.rs  model_manager.rs  uv_mesh_manager.rs
src/setup/: mod.rs  setup_cross_hair.rs  setup_highlight_cube.rs  setup_player.rs
src/systems/: block_highlighting.rs  break_blocks.rs  chunk_mesh_generation.rs  first_person_controller.rs  generate_chunks.rs  looking_at.rs  looking_at_marker.rs  mod.rs  place_blocks.rs  remove_chunks.rs  render_flat_meshes.rs  render_models.rs  render_uv_meshes.rs  sun_system.rs  third_person_camera_system.rs  transform_real_lights.rs  update_camera.rs  update_cameras.rs  update_chunks.rs  update_neighbouring_chunks.rs  update_real_lights.rs  velocity_system.rs
