[package]
name = "clone_v2"
version = "0.1.0"
authors = ["Jasper"]
edition = "2018"

[dependencies]
simple-winit = { path = "../libs/simple_winit/" }
finger-paint-wgpu = { path = "../libs/finger_paint_wgpu/" }
specs = { version = "0.16.1", features = ["specs-derive"] }
image = "0.23.14"
serde = { version = "1.0.64", features = ["derive"] }
serde_json = "1.0.64"
rand = { version = "0.7.2", features = ["wasm-bindgen"] }
bytemuck = "1.5.1"
cgmath = "*"
ton = { path = "../ton/", features = ["sfxr_player"] }

[profile.dev.package.'*']
opt-level = 3